[package]
name = "tick-cli"
version = "0.1.0"
edition = "2021"
authors = ["wmartz@gmail.com"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
warp = {version="0.4.2", features =["server"]}
serde_json = "1.0"
dotenv = "0.15"
reqwest = {version="0.12.24", features = ["json"]}
url = "2.2"
open = "5.3.3"
uuid = {version="1.18.1",features = ["v4",]}
keyring = "2.3"
confy = "2.0.0"
ratatui = "0.29.0"
dialoguer = "0.12.0"
comfy-table = "7.2.1"
chrono = "0.4.42"
chrono-tz = "0.10"
date_time_parser = "0.2.0"
iana-time-zone = "0.1.64"
